pkg/main/default/objects/ChatterSettings__c/ChatterSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Chatter Settings</label>
</CustomObject>