pkg/main/default/objects/ChatterSettings__c/fields/EnvelopeCompleted__c.field-meta.xml
<CustomField>
    <fullName>EnvelopeCompleted__c</fullName>
    <label>Envelope Completed Chatter Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>