pkg/main/default/objects/ChatterSettings__c/fields/EnvelopeDeclined__c.field-meta.xml
<CustomField>
    <fullName>EnvelopeDeclined__c</fullName>
    <label>Envelope Declined Chatter Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>