pkg/main/default/objects/ChatterSettings__c/fields/EnvelopeDelivered__c.field-meta.xml
<CustomField>
    <fullName>EnvelopeDelivered__c</fullName>
    <label>Envelope Delivered Chatter Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>