pkg/main/default/objects/ChatterSettings__c/fields/EnvelopeSent__c.field-meta.xml
<CustomField>
    <fullName>EnvelopeSent__c</fullName>
    <label>Envelope Sent Chatter Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>