pkg/main/default/objects/ChatterSettings__c/fields/EnvelopeVoided__c.field-meta.xml
<CustomField>
    <fullName>EnvelopeVoided__c</fullName>
    <label>Envelope Voided Chatter Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>