pkg/main/default/objects/ChatterSettings__c/fields/Flags__c.field-meta.xml
<CustomField>
    <fullName>Flags__c</fullName>
    <defaultValue>788</defaultValue>
    <label>Enabled Chatter Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>