pkg/main/default/objects/ChatterSettings__c/fields/RecipientCompleted__c.field-meta.xml
<CustomField>
    <fullName>RecipientCompleted__c</fullName>
    <label>Recipient Completed Chatter Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>