pkg/main/default/objects/ChatterSettings__c/fields/RecipientDeclined__c.field-meta.xml
<CustomField>
    <fullName>RecipientDeclined__c</fullName>
    <label>Recipient Declined Chatter Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>