pkg/main/default/objects/ChatterSettings__c/fields/RecipientDelivered__c.field-meta.xml
<CustomField>
    <fullName>RecipientDelivered__c</fullName>
    <label>Recipient Delivered Chatter Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>