pkg/main/default/objects/ChatterSettings__c/fields/RecipientSent__c.field-meta.xml
<CustomField>
    <fullName>RecipientSent__c</fullName>
    <inlineHelpText>t</inlineHelpText>
    <label>Recipient Sent Chatter Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>