pkg/main/default/objects/ChatterSettings__c/fields/RecipientSigned__c.field-meta.xml
<CustomField>
    <fullName>RecipientSigned__c</fullName>
    <label>Recipient Signed Chatter Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>